--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__minhas__redes" >Acesse minhas redes:</h2>
                 <a class="apresentacao__links__link" href="https://github.com/FelipeAlv3s">
-                    <img class="icones" src="../alura/assets/Logo Github.png">
+                    <img class="icones" src="./assets/Logo Github.png">
                     Github
                 </a>
                 <a class="apresentacao__links__link" href="https://www.linkedin.com/in/felipe-junior-2a4b7318a/">
-                    <img class="icones" src="../alura/assets/Logo linkedin.png">
+                    <img class="icones" src="./assets/Logo linkedin.png">
                     Linkedin
                 </a>
                 <a class="apresentacao__links__link" href="https://www.twitch.tv">
-                    <img class="icones" src="../alura/assets/Logo Twitch.png">
+                    <img class="icones" src="./assets/Logo Twitch.png">
                     Twitch</a>
             </div>    
             </section>
-        <img class="apresentacao__imagem" src="../savedpictures/Imagem.png">
+        <img class="apresentacao__imagem" src="./assets/Imagem.png">
     </main>
     <footer>
         <p class="rodape">Desenvolvido por Felipe</p>
